# Notifier

./: .coverage  .directory  .gitignore  .pre-commit-config.yaml  Demo.py  README.md  demo.py  install  requirements.txt  setup.cfg  tox.ini
html/notifbot/: index.html  notifbot.html
legacy_code/MDMBot/: notifications.py
legacy_code/MDMBot/conf/: conf_bot.py
legacy_code/MDM_slack/: ReadMe.txt  install  requirements.txt
legacy_code/MDM_slack/MDMBot/: notifications.py
legacy_code/MDM_slack/MDMBot/tools/: connectionManager.py
legacy_code/MDM_slack_2/: Demo.py  install  requirements.txt
legacy_code/MDM_slack_2/MDMBot_2/: notifications.py
legacy_code/MDM_slack_2/MDMBot_2/conf/: useragent.txt
legacy_code/MDM_slack_2/MDMBot_2/tools/: Terminal.py
legacy_code/MDM_slack_new/: Demo.py  install
legacy_code/MDM_slack_new/MDMBot/: notifications.py
legacy_code/MDM_slack_new/MDMBot/conf/: conf_bot.py
notifbot/: __init__.py  notifier.py
src/notifbot/: __init__.py  notifbot.py
tests/: test_notifbot.py
