[metadata]
name = notifbot
version = attr: inputmanager.__version__
packages = notifbot
long_description = file: README.md
long_description_content_type = text/markdown
description = send notification via Slack
url = https://github.com/tristanmsct/Notifier
author = Tristan Muscat
author_email = traistan.muscat@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    notifbot
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
notifbot = py.typed

[flake8]
max-line-length = 139
per-file-ignores = __init__.py:F401
